# django-cloudflare

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
django_cloudflare/: apps.py
