[project]
name = "django-cloudflare"
version = "0.1.0"
description = "A Django Application of Cloudflare"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-extensions>=3.2.3",
    "tzdata>=2025.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-browser-reload>=1.18.0",
    "ipython>=9.0.1",
    "isort>=6.0.1",
    "watchdog>=6.0.0",
    "werkzeug>=3.1.3",
]
