[project]
name = "django-cloudflare"
version = "0.1.0"
description = "A Django Application of Cloudflare"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-stubs>=5.1.3",
    "django-stubs-ext>=5.1.3",
    "tzdata>=2025.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=5.0.1",
    "django-environ>=0.12.0",
    "django-extensions>=3.2.3",
    "ipython>=9.0.1",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
    "watchdog>=6.0.0",
    "werkzeug>=3.1.3",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-xdist>=3.6.1",
    "tox>=4.25.0",
]

[tool.setuptools]
packages = ["django_cloudflare"]
